--- a/src/style/index.scss
+++ b/src/style/index.scss
@@ -33,7 +33,8 @@
         .el-badge{
           position: relative;
           top: 5px;
-          margin-left: 48px;
+          // margin-left: 48px;
+          margin: 0 40px;
         }
       }
     }
