--- a/src/style/index.scss
+++ b/src/style/index.scss
@@ -47,6 +47,15 @@
       margin-right: auto;
       background: #fff;
     }
+    .replay-line+ .replay-line{
+      border-top: 1px solid #ededed;
+    }
+    .el-divider {
+      margin-left: -20px;
+      margin-right: -20px;
+      width: auto;
+      margin-top: 0;
+    }
   }
   &-create {
     height: 100%;
